@@ -6,6 +6,8 @@ import java.util.Map;
 import net.mandaria.tippytipperlibrary.R;
 import net.mandaria.tippytipperlibrary.TippyTipperApplication;
 import android.content.Intent;
+import android.content.pm.PackageManager.NameNotFoundException;
+import android.os.Build;
 import android.os.Bundle;
 import android.view.View;
 import android.view.View.OnClickListener;
@@ -233,8 +235,64 @@ public class TippyTipper extends SherlockActivity  {
 			FlurryAgent.onEvent("About Button");
 			return true;
 		}
+		else if (item.getItemId() == R.id.email_feedback) {
+			FlurryAgent.onEvent("Email Feedback");
+			SendEmail();
+			return true;
+		} 
   		return false;
   	}
+  	
+  	private void SendEmail()
+	{
+		// Setup an intent to send email
+		Intent sendIntent;
+		sendIntent = new Intent(Intent.ACTION_SEND);
+		sendIntent.setType("application/octet-stream");
+		// Address
+		sendIntent.putExtra(Intent.EXTRA_EMAIL, new String[] { getString(R.string.email_address) });
+		// Subject
+		String appName = getString(R.string.app_name);
+		String version = "";
+		try
+		{
+			version = getPackageManager().getPackageInfo(getPackageName(), 0).versionName;
+		}
+		catch(NameNotFoundException e)
+		{
+
+		}
+
+		sendIntent.putExtra(Intent.EXTRA_SUBJECT, appName + " " + version);
+		// Body
+		String body = "\n\n\n\n\n";
+		body += getString(R.string.email_using_custom_rom) + "\n";
+		body += "--------------------\n";
+		body += getString(R.string.email_do_not_edit_message) + "\n\n";
+		body += "BOARD: " + Build.BOARD + "\n";
+		body += "BRAND: " + Build.BRAND + "\n";
+		body += "CPU_ABI: " + Build.CPU_ABI + "\n";
+		body += "DEVICE: " + Build.DEVICE + "\n";
+		body += "DISPLAY: " + Build.DISPLAY + "\n";
+		body += "FINGERPRINT: " + Build.FINGERPRINT + "\n";
+		body += "HOST: " + Build.HOST + "\n";
+		body += "ID: " + Build.ID + "\n";
+		body += "MANUFACTURER: " + Build.MANUFACTURER + "\n";
+		body += "MODEL: " + Build.MODEL + "\n";
+		body += "PRODUCT: " + Build.PRODUCT + "\n";
+		body += "TAGS: " + Build.TAGS + "\n";
+		body += "TIME: " + Build.TIME + "\n";
+		body += "TYPE: " + Build.TYPE + "\n";
+		body += "USER: " + Build.USER + "\n";
+		body += "VERSION.CODENAME: " + Build.VERSION.CODENAME + "\n";
+		body += "VERSION.INCREMENTAL: " + Build.VERSION.INCREMENTAL + "\n";
+		body += "VERSION.RELEASE: " + Build.VERSION.RELEASE + "\n";
+		body += "VERSION.SDK: " + Build.VERSION.SDK + "\n";
+		body += "VERSION.SDK_INT: " + Build.VERSION.SDK_INT + "\n";
+
+		sendIntent.putExtra(Intent.EXTRA_TEXT, body);
+		startActivity(Intent.createChooser(sendIntent, "Send Mail"));
+	}
   	
   	private void calcualteTipWithDefaultTipPercentage()
   	{
